# aws-advanced-python-wrapper

./: .flake8  .gitignore  AURORA-MYSQL-5_instance-PYTHON_3_11_test_basic_connectivity.html  CHANGELOG.md  CONTRIBUTING.md  Maintenance.md  NOTICE  README.md  THIRD-PARTY-LICENSES  blockchain.sql  mypy.ini  pyproject.toml  python3.12  settings.gradle.kts  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/styles/: vocab.txt
.github/workflows/: autoscaling_tests.yml  dependabot_auto_merge.yml  draft_release.yml  integration_tests.yml  integration_tests_codebuild.yml  main.yml  mysql_performance_tests.yml  pg_performance_tests.yml  release.yml  remove-old-artifacts.yml
aws_advanced_python_wrapper/: __init__.py  _dbapi.py  allowed_and_blocked_hosts.py  async_connection_pool.py  aurora_connection_tracker_plugin.py  aurora_initial_connection_strategy_plugin.py  aws_credentials_manager.py  aws_secrets_manager_plugin.py  blue_green_plugin.py  cleanup.py  cluster_topology_monitor.py  connect_time_plugin.py  connection_plugin_chain.py  connection_provider.py  credentials_provider_factory.py  custom_endpoint_plugin.py  database_dialect.py  default_plugin.py  developer_plugin.py  driver_configuration_profiles.py  driver_dialect.py  driver_dialect_codes.py  driver_dialect_manager.py  driver_info.py  dsql_iam_auth_plugin_factory.py  errors.py  exception_handling.py  execute_time_plugin.py  failover_plugin.py  failover_result.py  failover_v2_plugin.py  fastest_response_strategy_plugin.py  federated_plugin.py  gdb_failover_plugin.py  gdb_read_write_splitting_plugin.py  host_availability.py  host_list_provider.py  host_monitoring_plugin.py  host_monitoring_v2_plugin.py  host_selector.py  (+25 more)
aws_advanced_python_wrapper/django/: __init__.py
aws_advanced_python_wrapper/profiles/: configuration_profile.py  configuration_profile_preset_codes.py  driver_configuration_profiles.py
aws_advanced_python_wrapper/resources/: aws_advanced_python_wrapper_messages.properties  messages.properties
aws_advanced_python_wrapper/sqlalchemy/: mysql_orm_dialect.py  orm_dialect.py  pg_orm_dialect.py
aws_advanced_python_wrapper/sqlalchemy_dialects/: __init__.py  _exception_handling.py  mysql.py  pg.py
aws_advanced_python_wrapper/states/: session_state.py  session_state_service.py
aws_advanced_python_wrapper/tortoise/: __init__.py  sql_alchemy_tortoise_connection_provider.py  utils.py
aws_advanced_python_wrapper/tortoise_orm/: __init__.py
aws_advanced_python_wrapper/utils/: atomic.py  cache_map.py  concurrent.py  core_services.py  daemon_thread_pool.py  decorators.py  driver_info.py  dsql_token_utils.py  events.py  failover_mode.py  gdb_failover_mode.py  iam_utils.py  iamutils.py  log.py  messages.py  monitor_service.py  mysql_exception_handler.py  notifications.py  pg_exception_handler.py  properties.py  rds_token_utils.py  rds_url_type.py  rds_utils.py  rdsutils.py  region_utils.py  retry_util.py  saml_utils.py  services_container.py  sliding_expiration_cache.py  sliding_expiration_cache_container.py  thread_safe_connection_holder.py  token_utils.py  transient_connect.py  utils.py  value_container.py
aws_wrapper/: GenericDriverDialect.py  MariaDBTargetDriverDialect.py  MySQLTargetDriverDialect.py  PgTargetDriverDialect.py  __init__.py  aurora_connection_tracker_plugin.py  aurora_stale_dns.py  aurora_stale_dns_plugin.py  aws_secrets_manager_plugin.py  connect_time_plugin.py  connection_plugin_chain.py  connection_provider.py  database_dialect.py  default_plugin.py  dialect.py  driver_dialect.py  driver_dialect_manager.py  dummy_plugin.py  errors.py  exception_handling.py  exceptions.py  execute_time_plugin.py  failover_connection_plugin.py  failover_plugin.py  failover_result.py  generic_driver_dialect.py  generic_target_driver_dialect.py  host_availability.py  host_list_provider.py  host_monitoring_plugin.py  hostinfo.py  hostselector.py  hostspec.py  iam_plugin.py  mariadb_target_driver_dialect.py  mysql_driver_dialect.py  mysql_target_driver_dialect.py  pep249.py  pg_driver_dialect.py  pg_target_driver_dialect.py  (+13 more)
aws_wrapper/resources/: messages.properties
aws_wrapper/utils/: cache_dict.py  cache_map.py  concurrent.py  decorators.py  dialect.py  failover_mode.py  keep_current_transaction_status.py  log.py  messages.py  mysql_exception_handler.py  notifications.py  pg_exception_handler.py  preserve_transaction_status.py  properties.py  rds_url_type.py  rdsutils.py  restore_transaction_status.py  sliding_expiration_cache.py  subscribed_method_utils.py  timeout.py  utils.py
benchmarks/: README.md  benchmark_plugin.py  plugin_benchmarks.py  plugin_manager_benchmarks.py
docs/: Documentation.md  GettingStarted.md  KnownLimitations.md  README.md
docs/development-guide/: Architecture.md  DevelopmentGuide.md  IntegrationTests.md  LoadablePlugins.md  Pipelines.md  PluginManager.md  PluginPipelinePerformanceResults.md  PluginService.md  ReadWriteSplittingPluginPerformanceResults.md
docs/examples/: DSQLIamAuthentication.py  InternalConnectionPoolPasswordWarning.py  MySQLDjangoFailover.py  MySQLDjangoReadWriteSplitting.py  MySQLFailover.py  MySQLFastestResponseStrategy.py  MySQLFederatedAuthentication.py  MySQLIamAuthentication.py  MySQLInternalConnectionPoolPasswordWarning.py  (+21 more)
integration_testing/: build.gradle.kts  settings.gradle.kts
pawswrapper/: __init__.py  pep249.py  wrapper.py
tests/: __init__.py  test.py
unit_testing/: __init__.py  test_atomic_int.py  test_aurora_connection_tracker.py  test_aurora_host_list_provider.py  test_concurrent_dict.py  test_connection.py  test_connection_provider.py  test_connection_string_host_list_provider.py  test_cursor.py  test_dialect.py  test_failover_plugin.py  test_host_monitoring_plugin.py  test_host_selector.py  test_hostinfo.py  test_hostspec.py  test_iam_plugin.py  test_monitor_context.py  test_monitor_service.py  test_plugin_manager.py  test_properties_utils.py  test_rds_utils.py  test_reader_failover_handler.py  test_secrets_manager_plugin.py
venv312/: pyvenv.cfg
(+316 files in other folders)
