[tool.poetry]
name = "aws_advanced_python_wrapper"
version = "3.1.0"
description = "Amazon Web Services (AWS) Advanced Python Wrapper"
authors = ["Amazon Web Services"]
readme = "README.md"
license = "Apache-2.0"
include = ["CONTRIBUTING.md"]
repository = "https://github.com/awslabs/aws-advanced-python-wrapper"
documentation = "https://github.com/awslabs/aws-advanced-python-wrapper/docs/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

# SQLAlchemy dialect registration. Poetry exposes these as setuptools-style
# entry points under the ``sqlalchemy.dialects`` group, so the wrapper plugs in
# as a driver under SQLAlchemy's existing dialects (matching stock
# mysql+mysqlconnector / postgresql+psycopg) rather than as a parallel
# top-level dialect name: postgresql+aws_wrapper_psycopg and
# mysql+aws_wrapper_mysqlconnector.
[tool.poetry.plugins."sqlalchemy.dialects"]
"postgresql.aws_wrapper_psycopg" = "aws_advanced_python_wrapper.sqlalchemy_dialects.pg:AwsWrapperPGPsycopgDialect"
"mysql.aws_wrapper_mysqlconnector" = "aws_advanced_python_wrapper.sqlalchemy_dialects.mysql:AwsWrapperMySQLConnectorDialect"

[tool.poetry.dependencies]
python = "^3.10.0"
resourcebundle = "2.1.0"
boto3 = "^1.42.95"
toml = "^0.10.2"
aws-xray-sdk = "^2.15.0"
types_aws_xray_sdk = "^2.13.0"
opentelemetry-api = "^1.41.1"
opentelemetry-sdk = "^1.41.1"
requests = "^2.33.1"
boto3-stubs = ">=1.43.0,<1.44.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.20.2"
flake8 = ">=7.3.0,<8"
flake8-type-checking = ">=3.2.0,<4.0"
isort = "^5.13.2"
pep8-naming = ">=0.15.1,<0.16.0"
SQLAlchemy = "^2.0.49"
psycopg = "^3.3.3"
psycopg-binary = "^3.3.3"
mysql-connector-python = "^9.7.0"
django = "^5.2.13"
django-stubs = "^5.2.9"

[tool.poetry.group.test.dependencies]
boto3 = "^1.42.95"
types-boto3 = "^1.42.95"
coverage = "^7.13.5"
debugpy = "^1.8.20"
pydevd-pycharm = "^233.15619.17"
pytest = "^7.4.4"
pytest-mock = "^3.15.1"
pytest-html = "^4.2.0"
pytest-html-merger = ">=0.1.0,<0.1.1"
toxiproxy-python = "^0.1.1"
parameterized = "^0.9.0"
tabulate = ">=0.10.0,<0.11"
psycopg = "^3.3.3"
psycopg-binary = "^3.3.3"
mysql-connector-python = "^9.7.0"
opentelemetry-exporter-otlp = "^1.41.1"
opentelemetry-exporter-otlp-proto-grpc = "^1.41.1"
opentelemetry-sdk-extension-aws = "^2.1.0"
pytest-timeout = "^2.4.0"
pytest-repeat = "^0.9.4"

[tool.isort]
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
no_lines_before = "LOCALFOLDER"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:cache could not write path',
    'ignore:could not create cache path',
    'ignore:Exception during reset or similar:pytest.PytestUnhandledThreadExceptionWarning'
]
